--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
-    "axios": "^0.15.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
   },
@@ -18,5 +17,6 @@
     "api": "json-server --watch db.json --port 3004",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
