--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "enzyme": "^2.6.0",
+    "expect": "^1.20.2",
+    "mocha": "^3.2.0",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
     "react": "^15.4.0",
+    "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "api": "json-server --watch db.json --port 3004",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "mocha ./src/**/*.test.js --compilers js:babel-register",
     "eject": "react-scripts eject"
   }
 }
