--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-react": "^6.16.0",
     "enzyme": "^2.6.0",
     "expect": "^1.20.2",
+    "ignore-styles": "^5.0.1",
     "mocha": "^3.2.0",
     "react-scripts": "0.7.0"
   },
@@ -20,7 +21,7 @@
     "start": "react-scripts start",
     "api": "json-server --watch db.json --port 3004",
     "build": "react-scripts build",
-    "test": "mocha ./src/**/*.test.js --compilers js:babel-register",
+    "test": "mocha ./src/**/*.test.js --compilers js:babel-register --require ignore-styles",
     "eject": "react-scripts eject"
   }
 }
